Use "type": "wp-cli-package" to designate this as a WP-CLI package
See https://github.com/wp-cli/wp-cli/issues/2567

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "runcommand/assign-featured-images",
     "description": "Assign featured images to posts that support thumbnails.",
+    "type": "wp-cli-package",
     "homepage": "https://runcommand.io/wp/assign-featured-images/",
     "license": "MIT",
     "authors": [
